set the position of nav

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 
 <body>
-    <main>
+    <div class="main">
+        <nav>
+            <span class="logo"><img src="assets/images/logo.svg" alt=""></span>
+            <div>
+                <span>English</span>
+                <span>Sign in</span>
+            </div>
+        </nav>
         <div class="box">
-            
+
         </div>
-    </main>
+    </div>
 </body>
 
 </html>
