--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <span class="logo"><img src="assets/images/logo.svg" alt=""></span>
             <div>
-                <span>English</span>
-                <span>Sign in</span>
+                <button>English</button>
+                <button>Sign in</button>
             </div>
         </nav>
         <div class="box">
