--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix Clone</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -13,12 +14,28 @@
         <nav>
             <span class="logo"><img src="assets/images/logo.svg" alt=""></span>
             <div>
-                <button>English</button>
+                <button>文 English ▼</button>
                 <button>Sign in</button>
             </div>
         </nav>
         <div class="box">
-
+        </div>
+        <div class="big">
+            <div>
+                Unlimited movies, TV shows and more
+            </div>
+            <div>
+                Watch anywhere. Cancel anytime.
+            </div>
+            <div>
+                Ready to watch? Enter your email to create or restart your membership.
+            </div>
+            <div>
+                <input type="email" placeholder="Email address">
+                <button>Get Started ></button>
+            </div>
+        </div>
+        <div class="separator">
         </div>
     </div>
 </body>
